--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.7",
     "fast-csv": "^5.0.1",
+    "kysely": "^0.28.8",
     "mysql2": "^3.10.2",
     "pg": "^8.12.0",
     "pg-native": "^3.5.2",
@@ -27,6 +28,7 @@
     "@faker-js/faker": "^8.4.1",
     "@types/faker": "^6.6.9",
     "drizzle-kit": "^0.22.7",
+    "kysely-codegen": "^0.19.0",
     "pg-types": "^4.1.0",
     "prisma": "6.18.0-integration-next.11",
     "ts-node": "10.9.2",
