--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/faker": "^6.6.9",
+    "@types/pg": "^8.16.0",
     "drizzle-kit": "^0.22.7",
     "kysely-codegen": "^0.19.0",
     "pg-types": "^4.1.0",
