--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_PG_FORCE_NATIVE=true  NODE_OPTIONS='--max-old-space-size=4096 --loader=ts-node/esm' ts-node ./src/main.ts",
+    "start": "NODE_OPTIONS='--max-old-space-size=4096 --loader=ts-node/esm' ts-node ./src/main.ts",
     "prisma:gen:pg": "prisma generate --schema prisma-pg/schema.prisma",
     "prisma:dbpush:pg": "prisma db push --config ./prisma-pg/prisma.config.ts",
     "prisma:gen:mysql": "prisma generate --schema prisma-mysql/schema.prisma",
@@ -19,7 +19,6 @@
     "kysely": "^0.28.8",
     "mysql2": "^3.10.2",
     "pg": "^8.12.0",
-    "pg-native": "^3.5.2",
     "postgres": "^3.4.4",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.27"
