--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_OPTIONS='--max-old-space-size=4096 --loader=ts-node/esm' ts-node ./src/main.ts",
+    "start-additional": "NODE_OPTIONS='--max-old-space-size=4096 --loader=ts-node/esm' ts-node ./src/additional-main.ts",
     "prisma:gen:pg": "prisma generate --schema prisma-pg/schema.prisma",
     "prisma:dbpush:pg": "prisma db push --config ./prisma-pg/prisma.config.ts",
     "prisma:gen:mysql": "prisma generate --schema prisma-mysql/schema.prisma",
